--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "svue",
-  "version": "1.4.2",
+  "version": "1.4.3",
   "main": "src/svue.js",
   "devDependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.8.3",
     "cross-env": "^5.2.0",
     "css-loader": "^2.1.1",
+    "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.6.0",
     "serve": "^11.0.0",
     "style-loader": "^0.23.1",
@@ -16,7 +18,8 @@
   },
   "scripts": {
     "build": "cross-env NODE_ENV=production webpack",
-    "dev": "webpack-dev-server --content-base public"
+    "dev": "webpack-dev-server --content-base public",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
